--- a/TESTAPP c/checker/main/templates/main/base.html
+++ b/TESTAPP c/checker/main/templates/main/base.html
@@ -15,10 +15,12 @@
 <div class="col-lg-2 col-md-8 mx-auto">
         <h1 class="fw-light">Проверить пинг</h1>
         <p>
-          <a href="/start" class="btn btn-primary my-3">Запустить</a>
+          <a href="pingers" class="btn btn-primary my-3">Запустить</a>
         </p>
       </div>
 
+{% block content %}
+{% endblock content %}
 
 </body>
 </html>
